# simple_trim

./: .gitignore  Cargo.toml
src/: main.rs
