[package]
name = "simpletrim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "*", features = ["zlib-ng-compat"], default-features = false }
itertools = "0.10.3"
rayon = "1.5.2"
crossbeam-channel = "0.5.4"
gzp = "0.9.5"
clap = { version= "3.1.10" }
